--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "jquery": "^3.3.1",
-    "mockjs": "^1.0.1-beta3",
-    "requirejs": "^2.3.5"
+    "yu.object": "^1.0.1",
+    "mockjs": "^1.0.1-beta3"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "webpack": "^4.1.0"
   }
 }
